--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -4,11 +4,11 @@ name: Whostler Website Deploy
 on:
   push:
     branches:
-      - main
+      - develop
   pull_request:
     branches:
-      - main
-      
+      - develop
+
 jobs:
   deploy:
     name: Deploy
