--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up SSH
         uses: webfactory/ssh-agent@v0.5.4
         with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+          ssh-private-key: ${{ secrets.SSH_PKEY_PUB }}
 
       - name: Sync WordPress Files to Server
         env:
