--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Run WordPress Deployment Script
         env:
-          SERVER_USER: 'www-data' # Replace with your server username
+          SERVER_USER: 'root' # Replace with your server username
           SERVER_HOST: '177.92.144.247' # Replace with your server hostname or IP
         run: |
           ssh ${{ env.SERVER_USER }}@${{ env.SERVER_HOST }} "cd ${{ env.DEPLOY_PATH }} && ./deploy.sh"
